# cyxmake

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DONATION.md  LICENSE  PROJECT_INIT_SUMMARY.md  README.md  To_production.md  ai.md  architecture_claude.md  core_components_design.md  cyxmake.example.toml  cyxmake.toml  integration_decisions.md  llm.md  quantization_strategy.md  repl.md  summary.md  test_context.md  test_input.txt  test_results.md  tool_interface_design.md  usecases_workflow.md  valgrind.supp  why_cyxmake.md
.claude/: settings.local.json
.cyxmake/: agent_memory.json  agent_state.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
discusion/: ai_idear.md  cyxmake.md  data_collection.md  dev.md  discussion.md  usecase.md
docs/: API_REFERENCE.md  CONFIGURATION.md  PLUGINS.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  VIDEO_TUTORIALS.md  autonomous_agent_design.md  llm_integration.md  logger_usage.md  smart_agent_design.md
examples/plugins/hello_plugin/: CMakeLists.txt  hello_plugin.c
include/cyxmake/: action_planner.h  agent_comm.h  agent_coordinator.h  agent_registry.h  ai_build_agent.h  ai_provider.h  autonomous_agent.h  build_executor.h  build_intelligence.h  cache_manager.h  compat.h  config.h  conversation_context.h  cyxmake.h  error_analyzer.h  error_recovery.h  file_ops.h  fix_validation.h  input.h  llm_interface.h  logger.h  permission.h  plugin.h  project_context.h  project_generator.h  project_graph.h  prompt_templates.h  repl.h  rich_output.h  security.h  slash_commands.h  smart_agent.h  task_queue.h  threading.h  tool_executor.h
include/cyxmake/distributed/: artifact_cache.h  auth.h  distributed.h  network_transport.h  protocol.h  work_scheduler.h  worker_registry.h
integrations/: README.md
integrations/github-action/: README.md  action.yml
integrations/gitlab-ci/: .gitlab-ci-template.yml  README.md
integrations/jetbrains/: README.md  build.gradle.kts
integrations/jetbrains/src/main/kotlin/com/cyxwiz/cyxmake/: CyxMakeBundle.kt
integrations/jetbrains/src/main/kotlin/com/cyxwiz/cyxmake/actions/: BuildAction.kt
integrations/jetbrains/src/main/kotlin/com/cyxwiz/cyxmake/services/: CyxMakeProjectService.kt
integrations/jetbrains/src/main/kotlin/com/cyxwiz/cyxmake/settings/: CyxMakeSettings.kt
integrations/jetbrains/src/main/kotlin/com/cyxwiz/cyxmake/ui/: CyxMakeToolWindowFactory.kt
integrations/vscode/: README.md  package.json
integrations/vscode/src/: extension.ts
src/: CMakeLists.txt
src/agents/: agent_coordinator.c  agent_registry.c  message_bus.c  shared_state.c  task_queue.c  threading.c
src/cli/: action_planner.c  conversation_context.c  input.c  main.c  permission.c  repl.c  security.c  slash_commands.c
src/context/: cache_manager.c  project_analyzer.c  project_context.c  project_graph.c
src/core/: build_executor.c  config.c  file_ops.c  logger.c  orchestrator.c  project_generator.c  rich_output.c
src/distributed/: artifact_cache.c  auth.c  coordinator.c  network_client.c  network_common.c  network_server.c  protocol_codec.c  work_scheduler.c  worker_registry.c
src/llm/: ai_build_agent.c  ai_provider.c  autonomous_agent.c  build_intelligence.c  error_analyzer.c  llm_interface.c  prompt_templates.c  smart_agent.c
src/recovery/: error_diagnosis.c  error_patterns.c  fix_executor.c  fix_validation.c  solution_generator.c
src/tools/: tool_discovery.c  tool_executor.c  tool_registry.c
tests/: CMakeLists.txt  test_ai_agent.c  test_distributed.c  test_error_recovery.c  test_fix_validation.c  test_framework.h  test_logger.c  test_recovery_integration.c  test_security.c  test_tool_executor.c
tools/: CMakeLists.txt
